# protobuf

./: BUILD  Makefile.am  Makefile.in  configure  configure.ac  generate_descriptor_proto.sh  protobuf.pc.in
benchmarks/: Makefile.in
cmake/: extract_includes.bat.in  libprotoc.cmake  protobuf-module.cmake.in  tests.cmake
conformance/: Makefile.am  Makefile.in
examples/: Makefile
src/: Makefile.am  Makefile.in
src/google/protobuf/compiler/: main.cc  zip_output_unittest.sh
